After bug #136430 is fixed, it would be nice to make arrow keys usable for chart data label move. Steps to reproduce: 1. Open attachment #165084 [details] 2. Click on a single chart data label 3. Use arrow keys on keyboard Actual results: Nothing happens. Expected results: Data label moves by a bit (1 pt? 5 pt?) according to the arrow key. LibreOffice details: Version: 7.1.0.0.alpha0+ (x64) Build ID: 34a09c9c61bff30e8c4d16132bb47b2b1b16e422 CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win Locale: hu-HU (hu_HU); UI: en-US Calc: CL
Tünde Tóth committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/db7a5861b2c42a56aa56af0bee1e9c5b06faee99 tdf#136573 chart2: enable arrow keys in data label It will be available in 7.1.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Verified in Version: 7.1.0.0.alpha0+ Build ID: cd85546a2fbdade42f80fd3b6bd650791db9f32d CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3 Locale: en-US (en_US.UTF-8); UI: en-US Calc: threaded @Balázs Varga, thanks for fixing this issue!! Should it be closed as RESOLVED FIXED ?
(In reply to Xisco Faulí from comment #2) > @Balázs Varga, thanks for fixing this issue!! Should it be closed as > RESOLVED FIXED ? I meant Tünde Tóth
Tünde Tóth committed a patch related to this issue. It has been pushed to "libreoffice-7-0": https://git.libreoffice.org/core/commit/8bc4125a8dc192a8c4b276bfc45fa08806679531 tdf#136573 chart2: enable arrow keys in data label It will be available in 7.0.3. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Xisco Fauli committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/647958099600923d9ba3a57101891f62de326f4b tdf#136430, tdf#136573: sc: Add UItest It will be available in 7.1.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Caolán McNamara committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/5872f0c0d206466ad78e92be3d7d551b7ff4dbf1 Revert "tdf#136430, tdf#136573: sc: Add UItest" It will be available in 7.1.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Xisco Fauli committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/d34e969c888219bd3739fc4a8ef330c77f7e7adf tdf#136430, tdf#136573: sc: Add UItest (take 2) It will be available in 7.1.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.