tdf#136573 chart2: enable arrow keys in data label

moving to custom positions.

Follow-up of commit c10d5854b5427ad1bfffc00e77a9306c99c78c63
(tdf#136430 Fix chart crash trying to move data labels
with arrow keys.)

Change-Id: I8833e14a7c9c8f7bdb758fc0eb97be38aee35b34
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/102262
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>